--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
    
    На главной странице обычно пишут, зачем этот сайт и для чего.
   
+2003 год
 Сначало конечно было имя. Вернее желание его зарезервировать. 
 Тут же попытался нарисовать что-нибудь в дизайнере Яндекса.       
 Сил хватило только на "Hello    
                                  world" остался в планах на будущее.
  
-
-А потом пришло письмо от Яндекса, 
+2009 год
+ пришло письмо от Яндекса, 
      что на сайт уже три года никто не ходит, 
       ничего не меняется 
-  пора его закрывать и освобожать место тем, кому это нужнее.
+  пора его закрывать и освобожать место.
   
-Задело за живое - пришлось обновляться. 
+- пришлось обновляться. 
  
-В дизайнере рисовать было скучно и неинтересно. 
+В дизайнере рисовать было скучно и неудобно. 
 Значит надо рисовать HTML самому. 
  
 Так в общем и родилась концепция сайта. 
