--- a/geostat.html
+++ b/geostat.html
@@ -7,7 +7,7 @@
 </HEAD>
 <BODY onLoad="initBody();">
   <H1>Статистика посещений</H1>
-<a href="https://clustrmaps.com/site/1bcl3" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=KKJVBCKvzeQzRqOMnhLwEy4HBiPsFA3Gft3O_5HoTFM&cl=ffffff"></a>
+<a href='https://clustrmaps.com/site/1bcl3' target="_blank" title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=400&t=n&d=KKJVBCKvzeQzRqOMnhLwEy4HBiPsFA3Gft3O_5HoTFM&co=2d78ad&ct=ffffff'/></a>
 <!--<a href="http://www2.clustrmaps.com/ru/counter/maps.php?url=http://ochicherin.narod.ru" target="_blank">
 <img width=570 height=350 src="http://www2.clustrmaps.com/ru/stats/maps-clusters/ochicherin.narod.ru-world.jpg" border=0>
 </a>--> 
