--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>Заголовок первый</H1>
+  <H1>Основные принципы построения сайта.</H1>
 </BODY>
 </HTML>
