--- a/demoframe/a/b/c/demoframe.html
+++ b/demoframe/a/b/c/demoframe.html
@@ -1,33 +1,33 @@
 <html>
   <HEAD>
-  <TITLE id=title>Чичерин Олег</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=windows-1251">
+  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="/script.js"></script>
   <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <body id=area1 onload="initBody();">
 
-<h1>Наследование "дизайна".</h1>
+<h1>РќР°СЃР»РµРґРѕРІР°РЅРёРµ "РґРёР·Р°Р№РЅР°".</h1>
 
 <pre>
-Один и тот же файл документа лежит во всех узлах пути demoframe/a/b/c.
-Файлы, содержащие "обрамление" страницы находятся в узлах 
+РћРґРёРЅ Рё С‚РѕС‚ Р¶Рµ С„Р°Р№Р» РґРѕРєСѓРјРµРЅС‚Р° Р»РµР¶РёС‚ РІРѕ РІСЃРµС… СѓР·Р»Р°С… РїСѓС‚Рё demoframe/a/b/c.
+Р¤Р°Р№Р»С‹, СЃРѕРґРµСЂР¶Р°С‰РёРµ "РѕР±СЂР°РјР»РµРЅРёРµ" СЃС‚СЂР°РЅРёС†С‹ РЅР°С…РѕРґСЏС‚СЃСЏ РІ СѓР·Р»Р°С… 
 /,  demoframe/a,  demoframe/a/b/c.
 
-Робот пытается загрузить "обрамление" сначало из текущей директории.
-Если ему это не удается, он ищет выше, пока не доберется до корня.
+Р РѕР±РѕС‚ РїС‹С‚Р°РµС‚СЃСЏ Р·Р°РіСЂСѓР·РёС‚СЊ "РѕР±СЂР°РјР»РµРЅРёРµ" СЃРЅР°С‡Р°Р»Рѕ РёР· С‚РµРєСѓС‰РµР№ РґРёСЂРµРєС‚РѕСЂРёРё.
+Р•СЃР»Рё РµРјСѓ СЌС‚Рѕ РЅРµ СѓРґР°РµС‚СЃСЏ, РѕРЅ РёС‰РµС‚ РІС‹С€Рµ, РїРѕРєР° РЅРµ РґРѕР±РµСЂРµС‚СЃСЏ РґРѕ РєРѕСЂРЅСЏ.
 
 </pre>
 
-В приведенном ниже примере.
+Р’ РїСЂРёРІРµРґРµРЅРЅРѕРј РЅРёР¶Рµ РїСЂРёРјРµСЂРµ.
 <ul>
-<li><a href="/demoframe/demoframe.html">./demoframe Наследуется дизайн корня сайта</a>
+<li><a href="/demoframe/demoframe.html">./demoframe РќР°СЃР»РµРґСѓРµС‚СЃСЏ РґРёР·Р°Р№РЅ РєРѕСЂРЅСЏ СЃР°Р№С‚Р°</a>
 <ul>
-<li><a href="/demoframe/a/demoframe.html">./demoframe/a Локальный дизайн </a>
+<li><a href="/demoframe/a/demoframe.html">./demoframe/a Р›РѕРєР°Р»СЊРЅС‹Р№ РґРёР·Р°Р№РЅ </a>
 <ul>
-<li><a href="/demoframe/a/b/demoframe.html">./demoframe/a/b Наследуется дизайн с уровня /demoframe/a</a>
+<li><a href="/demoframe/a/b/demoframe.html">./demoframe/a/b РќР°СЃР»РµРґСѓРµС‚СЃСЏ РґРёР·Р°Р№РЅ СЃ СѓСЂРѕРІРЅСЏ /demoframe/a</a>
 <ul>
-<li><a href="/demoframe/a/b/c/demoframe.html">./demoframe/a/b/с Локальный дизайн</a>
+<li><a href="/demoframe/a/b/c/demoframe.html">./demoframe/a/b/СЃ Р›РѕРєР°Р»СЊРЅС‹Р№ РґРёР·Р°Р№РЅ</a>
 </ul>
 </ul>
 </ul>
