--- a/faq/faq7/faq7.html
+++ b/faq/faq7/faq7.html
@@ -2,8 +2,8 @@
   <HEAD>
   <TITLE id=title>Чичерин Олег</TITLE>
   <META http-equiv=Content-Type content="text/html; charset=utf-8">
-  <script src="script.js"></script>
-  <LINK href="index_files/style.css" type=text/css rel=stylesheet>
+  <script src="/script.js"></script>
+  <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
   <H1>Состав и пропорции бетона </H1>
