--- a/faq/faq5/faq5.html
+++ b/faq/faq5/faq5.html
@@ -2,7 +2,7 @@
   <HEAD>
   <TITLE id=title>Чичерин Олег</TITLE>
   <META http-equiv=Content-Type content="text/html; charset=utf-8">
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
   <script src="astro.js"></script>
   <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAS2rtcqjB0Dl-ZwFsAPT80RQFuHzDvnd6VVmNl1G1pcqt8_pOSxSOSmcuu-ddoaS2Y9HUDcRq4QLuaA"
           type="text/javascript"></script> 
@@ -113,7 +113,7 @@ if (rz<0) sat_sun_angle.innerHTML = " левее на "+ -1*rz +" гр";
       }
     }
     </script> 
-  <LINK href="index_files/style.css" type=text/css rel=stylesheet>
+  <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();initMap();" onunload="GUnload()">
   <H1>Как расчитать направление на спутник при помощи Google.</H1>
