--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 - пришлось обновляться. 
  
 В дизайнере рисовать было скучно и неудобно. 
-Значит надо рисовать HTML самому. 
+Значит надо рисовать HTML в текстовом редакторе. 
  
 Так в общем и родилась концепция сайта. 
  
@@ -43,7 +43,7 @@
              
                                                  Иногда получается. :)
  
- 
+<a href="/about.html">Основные принцыпы построения сайта</a> 
 </div>
 </pre>
 </BODY>
