--- a/about.html
+++ b/about.html
@@ -7,5 +7,11 @@
 </HEAD>
 <BODY onLoad="initBody();">
   <H1>Основные принципы построения сайта.</H1>
+Звучит конечно очень амбициозно, но попытаюсь объяснить.
+<ul>
+ <li> Автоматическая подгрузка дизайна. 
+ <li>
+ <li>
+</ul>
 </BODY>
 </HTML>
