--- a/about.html
+++ b/about.html
@@ -9,9 +9,24 @@
   <H1>Основные принципы построения сайта.</H1>
 Звучит конечно очень амбициозно, но попытаюсь объяснить.
 <ul>
- <li> Автоматическая подгрузка дизайна. 
- <li>
- <li>
+ <li> Для создания сайта используется текстовой редактор. 
+ <li> Все украшательства подгружается автоматически. 
+ <li> Единая карта сайта. 
 </ul>
+<H1>"Умные" теги.</H1>
+<H2>Простая отображалка текста.</H2>
+
+<textarea class="example">
+ <textarea class="example">
+  Здесь замечательно помещается любой код с < &lt; и прочим
+ </textarea>
+</textarea>
+<H2>Демонстрация исходного кода части веб страницы .</H2>
+<H2>Часы.</H2>
+<H2>Подгружаемыя таблица.</H2>
+<H2>Имитатор телетайпа.</H2>
+<H2>Подгрузка FB2.</H2>
+<H2>Фотогалерея.</H2>
+
 </BODY>
 </HTML>
