--- a/about.html
+++ b/about.html
@@ -18,10 +18,18 @@
 
 <textarea class="example">
  <textarea class="example">
-  Здесь замечательно помещается любой код с < &lt; и прочим
+  Здесь замечательно помещается любой код с < и прочим
  </textarea>
 </textarea>
 <H2>Демонстрация исходного кода части веб страницы .</H2>
+<textarea class="example">
+ <textarea class=preview>area1</textarea>
+</textarea>
+<H2>Демонстрация текущего кода части веб страницы .</H2>
+<textarea class="example">
+ <textarea class=preview>area1</textarea>
+</textarea>
+
 <H2>Часы.</H2>
 <H2>Подгружаемыя таблица.</H2>
 <H2>Имитатор телетайпа.</H2>
