--- a/about.html
+++ b/about.html
@@ -14,13 +14,22 @@
  <li> Единая карта сайта. 
 </ul>
 <H1>"Умные" теги.</H1>
-<H2>Простая отображалка текста.</H2>
 
+<H2>Простая отображалка текста.</H2>
 <textarea class="example">
  <textarea class="example">
   Здесь замечательно помещается любой код с < и прочим
+<div id=area1>
+<span class=clock>ЧАСЫ</span>
+</div>
  </textarea>
 </textarea>
+<H2>Часы.</H2>
+
+<div id=area1>
+<span class=clock>ЧАСЫ</span>
+</div>
+
 <H2>Демонстрация исходного кода части веб страницы .</H2>
 <textarea class="example">
  <textarea class=preview>area1</textarea>
@@ -30,11 +39,11 @@
  <textarea class=preview>area1</textarea>
 </textarea>
 
-<H2>Часы.</H2>
 <H2>Подгружаемыя таблица.</H2>
 <H2>Имитатор телетайпа.</H2>
 <H2>Подгрузка FB2.</H2>
 <H2>Фотогалерея.</H2>
+<H2>"Читалка" на Flash. Работает только на старых браузерах.</H2>
 
 </BODY>
 </HTML>
