--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
  <li> Все украшательства подгружается автоматически. 
  <li> Единая карта сайта. 
 </ul>
-<H1>"Умные" теги.</H1>
+Основа сайта,"Умные" теги, позволяющие сложные вещи делать просто.
 
 <H2>Простая отображалка текста.</H2>
 <textarea class="example">
@@ -34,13 +34,28 @@
 <textarea class="example">
  <textarea class=preview>area1</textarea>
 </textarea>
+Видим на примере часов
+<textarea class=preview>area1</textarea>
+
 <H2>Демонстрация текущего кода части веб страницы .</H2>
 <textarea class="example">
- <textarea class=preview>area1</textarea>
+ <textarea class=liveview>area1</textarea>
+</textarea>
+Видим на примере часов
+ <textarea class=liveview>area1</textarea>
+
+<H2>Подгружаемыя csv таблица.</H2>
+
+<H2>Имитатор телетайпа.</H2>
+<textarea class="example">
+<div class=tty>
+Сенсационный поворот
 </textarea>
 
-<H2>Подгружаемыя таблица.</H2>
-<H2>Имитатор телетайпа.</H2>
+<div class=tty>
+Сенсационный поворот в <b>судебном</b> процессе над захватчиками судна Arctic Sea: 
+прокурор назвал имена заказчиков захвата судна.
+</div>
 <H2>Подгрузка FB2.</H2>
 <H2>Фотогалерея.</H2>
 <H2>"Читалка" на Flash. Работает только на старых браузерах.</H2>
