--- a/about.html
+++ b/about.html
@@ -10,10 +10,11 @@
 Звучит конечно очень амбициозно, но попытаюсь объяснить.
 <ul>
  <li> Для создания сайта используется текстовой редактор. 
- <li> Все украшательства подгружается автоматически. 
+ <li> Все украшательства лежат вне страницы и подгружаеются автоматически. 
  <li> Единая карта сайта. 
 </ul>
-Основа сайта,"Умные" теги, позволяющие сложные вещи делать просто.
+
+Основа сайта - "умные" теги, позволяющие сложные вещи делать просто.
 
 <H2>Простая отображалка текста.</H2>
 <textarea class="example">
@@ -59,6 +60,9 @@
 <H2>Подгрузка FB2.</H2>
 <H2>Фотогалерея.</H2>
 <H2>"Читалка" на Flash. Работает только на старых браузерах.</H2>
+<H2>Автоматическое оглавление страницы.</H2>
+<H2>Автоматическая карта сайта.</H2>
+<H2>Выборочная печать.</H2>
 
 </BODY>
 </HTML>
