--- a/newsru.html
+++ b/newsru.html
@@ -5,7 +5,7 @@
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
-<BODY onLoad="initBody();GetRSS(example,'http://www.newsru.com/plain/rss/all.xml','rss.xslt');">
+<BODY onLoad="initBody();GetRSS(example,'https://rss.newsru.com/all_news','rss.xslt');">
   <h1> Пример импорта внешней новостной ленты </h1>
   <div id=example>Здесь размещен текст главной страницы</div>
 </BODY>
