--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
 <H2>Автоматическое оглавление страницы.</H2>
 <H2>Автоматическая карта сайта.</H2>
 <H2>Выборочная печать.</H2>
+<H2>Нестандартные шрифты.</H2>
 
 </BODY>
 </HTML>
