--- a/menu_h.html
+++ b/menu_h.html
@@ -3,16 +3,22 @@
   <TITLE id=title>Чичерин Олег</TITLE>
   <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <link rel="shortcut icon" href="favicon.ico">
-  <LINK href="index_files/style.css" type=text/css rel=stylesheet>
-  <script src="script.js"></script>
+  <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
+  <script src="/script.js"></script>
 </HEAD>
 <BODY onLoad="initBody();">
   <h1> Пример меню</h1>
+  <h2>Bar</h2>
   <div id=example class=bar href="menu.xml">menu.xml</div>
-   <div id=example21 class=menu href="menu.xml">menu.xml</div>
+  <h2>Menu</h2>
+  <div id=example21 class=menu href="menu.xml">menu.xml</div>
+  <h2>news</h2>
   <div id=example2 class=news>3</div>
+  <h2>Menu</h2>
   <div id=example class=menu href="menu.xml">menu.xml</div>
+  <h2>rss_short</h2>
   <div id=example class=rss_short href="rss.xml">rss.xml</div>
+  <h2>rss_long</h2>
   <div id=example class=rss_long href="rss.xml">rss.xml</div>
 </BODY>
 </HTML>
