--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@ END:VCARD
 <br><br><br><br><br><br><br>
 <!--img src="http://datamatrix.kaywa.com/img.php?s=5&d=BEGIN%3AVCARD%0D%0AN%3BENCODING%3DBASE64%3BCHARSET%3Dwindows-1251%3A1%2Bj35fDo7TvO6%2BXjO83o6u7r4OXi6Pc7Ow%3D%3D%0D%0A%0D%0AEMAIL%3AOChicherin%40yandex.ru%0D%0AURL%3Ahttp%3A%2F%2Fochicherin.narod.ru%0D%0AEND%3AVCARD"-->
 <img class=datamatrix alt="BEGIN:VCARD
-N;ENCODING=BASE64;CHARSET=windows-1251:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
+N;ENCODING=BASE64;CHARSET=utf-8:Чичерин Олег Николаевич
 
 EMAIL:OChicherin@yandex.ru
 URL:http://ochicherin.narod.ru
