--- a/contacts.html
+++ b/contacts.html
@@ -1,13 +1,13 @@
-п»ї<HTML>
+<HTML>
   <HEAD>
-  <TITLE id=title>Р§РёС‡РµСЂРёРЅ РћР»РµРі</TITLE>
+  <TITLE id=title>Чичерин Олег</TITLE>
   <META http-equiv=Content-Type content="text/html; charset=utf-8">
   <script src="script.js"></script>
   <LINK href="index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
-  <H1>РљРѕРЅС‚Р°РєС‚С‹</H1>
-РџРёС€РёС‚Рµ РїРёСЃСЊРјР° РЅР° Р°РґСЂРµСЃ <a href="mailto:ochicherin@yandex.ru?Subject=РЈРІРµСЂРµРЅРёСЏ РІ РіР»СѓР±РѕС‡Р°Р№С€РµРј РїРѕС‡С‚РµРЅРёРё&Body=РЈРІР°Р¶Р°РµРјС‹Р№ РћР»РµРі РќРёРєРѕР»Р°РµРІРёС‡">ochicherin@yandex.ru</a>
+  <H1>Контакты</H1>
+Пишите письма на адрес <a href="mailto:ochicherin@yandex.ru?Subject=Уверения в глубочайшем почтении&Body=Уважаемый Олег Николаевич">ochicherin@yandex.ru</a>
 <!--
 BEGIN:VCARD
 N;ENCODING=BASE64;CHARSET=windows-1251:1+j35fDo7TvO6+XjO83o6u7r4OXi6Pc7Ow==
@@ -19,7 +19,7 @@ END:VCARD
 <br><br><br><br><br><br><br>
 <!--img src="http://datamatrix.kaywa.com/img.php?s=5&d=BEGIN%3AVCARD%0D%0AN%3BENCODING%3DBASE64%3BCHARSET%3Dwindows-1251%3A1%2Bj35fDo7TvO6%2BXjO83o6u7r4OXi6Pc7Ow%3D%3D%0D%0A%0D%0AEMAIL%3AOChicherin%40yandex.ru%0D%0AURL%3Ahttp%3A%2F%2Fochicherin.narod.ru%0D%0AEND%3AVCARD"-->
 <img class=datamatrix alt="BEGIN:VCARD
-N;CHARSET=utf-8:Р§РёС‡РµСЂРёРЅ РћР»РµРі РќРёРєРѕР»Р°РµРІРёС‡
+N;CHARSET=utf-8:Чичерин Олег Николаевич
 
 EMAIL:OChicherin@yandex.ru
 URL:http://ochicherin.narod.ru
