--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 Звучит конечно очень амбициозно, но попытаюсь объяснить.
 <ul>
  <li> Для создания сайта используется текстовой редактор. 
- <li> Все украшательства лежат вне страницы и подгружаеются автоматически. 
+ <li> Рамка автоматически обрамляет страницу. 
+ <li> Сама страница является рамкой для дочерних элементов. 
  <li> Единая карта сайта. 
 </ul>
 
