--- a/about.html
+++ b/about.html
@@ -17,54 +17,58 @@
 
 Основа сайта - "умные" теги, позволяющие сложные вещи делать просто.
 
-<H2>Простая отображалка текста.</H2>
-<textarea class="example">
- <textarea class="example">
-  Здесь замечательно помещается любой код с < и прочим
-<div id=area1>
-<span class=clock>ЧАСЫ</span>
-</div>
- </textarea>
-</textarea>
-<H2>Часы.</H2>
-
-<div id=area1>
-<span class=clock>ЧАСЫ</span>
-</div>
-
-<H2>Демонстрация исходного кода части веб страницы .</H2>
-<textarea class="example">
- <textarea class=preview>area1</textarea>
-</textarea>
-Видим на примере часов
-<textarea class=preview>area1</textarea>
-
-<H2>Демонстрация текущего кода части веб страницы .</H2>
-<textarea class="example">
- <textarea class=liveview>area1</textarea>
-</textarea>
-Видим на примере часов
- <textarea class=liveview>area1</textarea>
-
-<H2>Подгружаемыя csv таблица.</H2>
-
-<H2>Имитатор телетайпа.</H2>
-<textarea class="example">
-<div class=tty>
-Сенсационный поворот
-</textarea>
-
-<div class=tty>
-Сенсационный поворот в <b>судебном</b> процессе над захватчиками судна Arctic Sea: 
-прокурор назвал имена заказчиков захвата судна.
-</div>
-<H2>Подгрузка FB2.</H2>
-<H2>Фотогалерея.</H2>
-<H2>"Читалка" на Flash. Работает только на старых браузерах.</H2>
-<H2>Автоматическое оглавление страницы.</H2>
-<H2>Автоматическая карта сайта.</H2>
-<H2>Выборочная печать.</H2>
-<H2>Нестандартные шрифты.</H2>
+<ul>
+ <li> DIV
+   <ul>
+     <li> menu
+     <li> bar
+     <li> rss_short
+     <li> rss_long
+     <li> fb2
+     <li> include
+     <li> csv
+     <li> csv2 
+     <li> csv3
+     <li> sitemap_total
+     <li> sitemap_top
+     <li> sitemap_child
+     <li> sitemap_current
+     <li> sitemap_tree
+     <li> tty
+     <li> toc
+     <li> demo_text
+     <li> demo_font
+   </ul>
+ <li> TEXTAREA
+   <ul>
+     <li> EXAMPLE
+     <li> SAMPLE
+     <li> PREVIEW
+     <li> POSTVIEW
+     <li> LIVEVIEW
+   </ul>
+ <li> SPAN
+   <ul>
+     <li> CLOCK
+   </ul>
+ <li> SELECT
+   <ul>
+     <li> EXTERNAL
+     <li> EXTERNAL_GALERY
+   </ul>
+ <li> IMG
+   <ul>
+     <li> galery_max
+     <li> galery_min
+     <li> galery_live
+     <li> galery_show
+     <li> galery_flash
+     <li> datamatrix
+     <li> qrcode
+     <li> href
+   </ul>
+</ul>
+  
 
 </BODY>
 </HTML>
