--- a/reader/3.html
+++ b/reader/3.html
@@ -3,7 +3,7 @@
 <title>Flash Page Flip</title>
 <meta name="Description" content="Flash Page Flip is best advanced dynamic page flip flash object">
 <meta name="Keywords" content="page flip, page flipping, page turn, flip album, flipping book, digital book, online catalog">
-<script src="/reader/js/AC_RunActiveContent.js" type="text/javascript"></script>
+<script src="../reader/js/AC_RunActiveContent.js" type="text/javascript"></script>
 <script src="/reader/js/PopUpWin.js" type="text/javascript"></script>
 <script src="/script.js" type="text/javascript"></script>
 <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
@@ -15,7 +15,7 @@
   <param name="bgcolor" value="#cccccc" />
   <param name="allowFullScreen" value="true" />
   <param name="allowScriptAccess" value="sameDomain" />
-  <embed src="/reader/swf/Magazine.swf?xmlFile=/lib/3/xml/3.xml" width="100%" height="100%" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" wmode="transparent" allowFullScreen="true" allowScriptAccess="sameDomain"></embed>
+  <embed src="../reader/swf/Magazine.swf?xmlFile=3.xml" width="100%" height="100%" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" wmode="transparent" allowFullScreen="true" allowScriptAccess="sameDomain"></embed>
 </object>
 <div id=d1 style="position:absolute;left:0px;top:0px;background-color:#c96300;z-index=1;">
 <TABLE cellSpacing=0 cellPadding=20 align=center>
