--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
    На главной странице обычно пишут, зачем этот сайт и для чего.
   
-2003 год
+2003 год.
 Сначало конечно было имя. Вернее желание его зарезервировать. 
 Тут же попытался нарисовать что-нибудь в дизайнере Яндекса.       
 Сил хватило только на "Hello    
