--- a/cookie.html
+++ b/cookie.html
@@ -19,7 +19,7 @@
 <input type=Submit value="Считать URL" onClick="QueryForm('form1');" > 
 <hr>
 <input type=Submit value="Показать все куки" onClick="alert(document.cookie);" > 
-<input type=Submit value="Показать входные параметры" onClick="showParameters();" > 
+<input type=Submit value="Показать URL" onClick="ShowParameters();" > 
 
 </body>
 </html>
