--- a/demo/div_include/step2.html
+++ b/demo/div_include/step2.html
@@ -1,2 +1,2 @@
-Которая в тёмном чулане хранится
+РљРѕС‚РѕСЂР°СЏ РІ С‚С‘РјРЅРѕРј С‡СѓР»Р°РЅРµ С…СЂР°РЅРёС‚СЃСЏ
 <div id=form class=include>step1.html</div>
