--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -16,18 +16,31 @@
 
 Вот дом,
 Который построил Джек.
-
+<hr>
 <div id=area1>
 А это пшеница,
 Которая в тёмном чулане хранится
 <div id=form class=include>step1.html</div>
 </div>
-
+<hr>
 <div id=area2>
 А это весёлая птица-синица,
 Которая часто ворует пшеницу,
 <div id=form class=include>step2.html</div>
 </div>
+<hr>
+<div id=area3>
+Вот кот,
+Который пугает и ловит синицу,
+<div id=form class=include>step3.html</div>
+</div>
+<hr>
+<div id=area4>
+Вот пёс без хвоста,
+Который за шиворот треплет кота,
+<div id=form class=include>step4.html</div>
+</div>
+<hr>
 
 <pre>
 
