--- a/demo/div_include/step4.html
+++ b/demo/div_include/step4.html
@@ -1,2 +1,2 @@
-Которая часто ворует пшеницу,
-<div id=form class=include>step2.html</div>
+Который пугает и ловит синицу,
+<div id=form class=include>step3.html</div>
