--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -13,6 +13,12 @@
 
 <textarea class=preview>area1</textarea>
 <textarea class=preview>area2</textarea>
+<textarea class=preview>area3</textarea>
+<textarea class=preview>area4</textarea>
+<textarea class=preview>area5</textarea>
+<textarea class=preview>area6</textarea>
+<textarea class=preview>area7</textarea>
+<textarea class=preview>area8</textarea>
 
 Вот дом,
 Который построил Джек.
@@ -39,6 +45,30 @@
 Вот пёс без хвоста,
 Который за шиворот треплет кота,
 <div id=form class=include>step4.html</div>
+</div>
+<hr>
+<div id=area5>
+А это корова безрогая,
+Лягнувшая старого пса без хвоста,
+<div id=form class=include>step5.html</div>
+</div>
+<hr>
+<div id=area6>
+А это старушка, седая и строгая,
+Которая доит корову безрогую,
+<div id=form class=include>step6.html</div>
+</div>
+<hr>
+<div id=area7>
+А это ленивый и толстый пастух,
+Который бранится с коровницей строгою,
+<div id=form class=include>step7.html</div>
+</div>
+<hr>
+Вот два петуха,
+Которые будят того пастуха,
+<div id=area8>
+<div id=form class=include>step8.html</div>
 </div>
 <hr>
 
@@ -106,15 +136,15 @@
 
 Вот два петуха,
 Которые будят того пастуха,
-Который бранится с коровницей строгою,
-Которая доит корову безрогую,
-Лягнувшую старого пса без хвоста,
-Который за шиворот треплет кота,
-Который пугает и ловит синицу,
-Которая часто ворует пшеницу,
-Которая в тёмном чулане хранится
-В доме,
-Который построил Джек. 
+8 Который бранится с коровницей строгою,
+7 Которая доит корову безрогую,
+6 Лягнувшую старого пса без хвоста,
+5 Который за шиворот треплет кота,
+4 Который пугает и ловит синицу,
+3 Которая часто ворует пшеницу,
+2 Которая в тёмном чулане хранится
+1 В доме,
+  Который построил Джек. 
 </pre>
 
 </BODY>
