--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -76,10 +76,28 @@ Copy/Paste токсичен.
 <textarea class=preview>area7</textarea>
 <textarea class=preview>area8</textarea>
 
-А так, содержимое подгружаемых файлов.
-<textarea class=sample>step0.html</textarea>
+<h5>А так, содержимое подгружаемых файлов.</h5>
 
-Первоисточник
+step0.html
+<textarea class=sample>step0.html</textarea>
+step1.html
+<textarea class=sample>step1.html</textarea>
+step2.html
+<textarea class=sample>step2.html</textarea>
+step3.html
+<textarea class=sample>step3.html</textarea>
+step4.html
+<textarea class=sample>step4.html</textarea>
+step5.html
+<textarea class=sample>step5.html</textarea>
+step6.html
+<textarea class=sample>step6.html</textarea>
+step7.html
+<textarea class=sample>step7.html</textarea>
+step8.html
+<textarea class=sample>step8.html</textarea>
+
+<h5>Первоисточник</h5>
 <textarea class=example>
 Самуил Маршак. Дом, который построил Джек
 
@@ -151,8 +169,8 @@ Copy/Paste токсичен.
 3 Который пугает и ловит синицу,
 2 Которая часто ворует пшеницу,
 1 Которая в тёмном чулане хранится
-0 В доме,
-  Который построил Джек. 
+1 В доме,
+0 Который построил Джек. 
 </textarea>
 
 </BODY>
