--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -9,16 +9,17 @@
 
   <H1>DIV include.</H1>
 
-Реализация основного правила, 
-сама страница является рамкой для для других страниц.
+Реализация основного правила. 
+Cама страница является рамкой для для других страниц.
 Вся информация, которая будет дублироваться, 
 должна быть вынесена на отдельную страницу и подгружаться по мере надобности.
-Copy/Paste токсичен.
+Copy/Paste - токсичен.
 <br>
 Итак пример. Всем знакомое стихотворенье.
 
-<H3>Самуил Маршак. Дом, который построил Джек.</H3>
+<H4>Самуил Маршак. Дом, который построил Джек.</H4>
 
+<hr>
 <div id=area0>
 Вот дом,
 <div id=form class=include>step0.html</div>
@@ -65,7 +66,7 @@ Copy/Paste токсичен.
 </div>
 <hr>
 
-Так выглядят исходные элементы страницы.
+<h5>Так выглядят исходные элементы страницы.</h5>
 <textarea class=preview>area0</textarea>
 <textarea class=preview>area1</textarea>
 <textarea class=preview>area2</textarea>
@@ -97,7 +98,7 @@ step7.html
 step8.html
 <textarea class=sample>step8.html</textarea>
 
-<h5>Первоисточник</h5>
+<h5>А это текст первоисточника.</h5>
 <textarea class=example>
 Самуил Маршак. Дом, который построил Джек
 
