--- a/demofont.html
+++ b/demofont.html
@@ -123,7 +123,7 @@
             onchange="document.getElementById('ean13').textContent=NumToEan13(document.getElementById('inputindex').value);"> 
     <br> 
 <span id=area3>
- <span style="font-family: 'CodeEAN13'; font-size:3cm;" id='ean13'>12345678</span>
+ <span style="font-family: 'CodeEAN13'; font-size:3cm;" id='ean13'>0AAKKAK*aaaaaa+</span>
 </span>
 
 Исходный код элемента. 
