--- a/about.html
+++ b/about.html
@@ -2,18 +2,19 @@
   <HEAD>
   <TITLE id=title>Чичерин Олег</TITLE>
   <META http-equiv=Content-Type content="text/html; charset=utf-8">
-  <script src="script.js"></script>
-  <LINK href="index_files/style.css" type=text/css rel=stylesheet>
+  <script src="/script.js"></script>
+  <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onLoad="initBody();">
   <H1>Основные принципы построения сайта.</H1>
 Звучит конечно очень амбициозно, но попытаюсь объяснить.
-<ul>
+<ol>
  <li> Для создания сайта используется текстовой редактор. 
- <li> Рамка автоматически обрамляет страницу. 
+ <li> У страницы есть рамка, которая автоматически обрамляет страницу. 
+ <li> В каждой папке может существовать своя рамка. Если рамки нет, она наследуется из родительской папки. 
  <li> Сама страница является рамкой для дочерних элементов. 
- <li> Единая карта сайта. 
-</ul>
+ <li> Навигация. Единая карта сайта плюс rss лента.  
+</ol>
 
 Основа сайта - "умные" теги, позволяющие сложные вещи делать просто.
 
