--- a/demofont.html
+++ b/demofont.html
@@ -127,7 +127,7 @@
 </span>
 
 Исходный код элемента. 
- <textarea class=postview>area3</textarea>
+ <textarea class=liveview>area3</textarea>
 
 Всё.
 </pre>
