--- a/reader/reader.html
+++ b/reader/reader.html
@@ -8,7 +8,7 @@
 <script src="/script.js" type="text/javascript"></script>
 <LINK href="/index_files/style.css" type=text/css rel=stylesheet>
 </head>
-<body onload=";">
+<body onload="scanTemplates();">
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="100%" height="100%">
   <param name="movie" value="/reader/swf/Magazine.swf" />
   <param name="quality" value="high" />
