--- a/demofont.html
+++ b/demofont.html
@@ -40,7 +40,13 @@
 
     @font-face {
       font-family: 'CodeEAN13';
-      src: url('fonts/ean13.ttf') format('truetype');,
+      src: url('fonts/ean13.eot');
+      src: url('fonts/ean13.eot?#iefix') format('eot'),
+           url('fonts/ean13.woff') format('woff'),
+           url('fonts/ean13.ttf') format('truetype'),
+           url('fonts/ean13.svg#code_ean13regular') format('svg');
+      font-weight: normal;
+      font-style: normal;
     }
 
 </style>
