--- a/demofont.html
+++ b/demofont.html
@@ -135,7 +135,7 @@
 Исходный код элемента. 
  <textarea class=liveview>area3</textarea>
 
-Впрочем, с кодом EAN-13 <a herf="https://ru.wikipedia.org/wiki/European_Article_Number">не все так просто.</a>
+Впрочем, с кодом EAN-13 <a href="https://ru.wikipedia.org/wiki/European_Article_Number">не все так просто.</a>
 Всё.
 </pre>
 </body>
