--- a/demofont.html
+++ b/demofont.html
@@ -51,7 +51,7 @@
 
     @font-face {
       font-family: 'Moon';
-      src: url('fonts/ean13.ttf');
+      src: url('fonts/moon.ttf');
       font-weight: normal;
       font-style: normal;
     }
@@ -146,7 +146,7 @@
 
 Или Лунный шрифт.
  <input type="input" name="moontext"
-        id="moontext" value="1111111111111"> 
+        id="moontext" value="01234567890 ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"> 
 <input type=Submit value="Обновить" onClick="document.getElementById('moon').textContent=document.getElementById('moontext').value;" > 
     <br> 
 <span id=area4>
