--- a/demofont.html
+++ b/demofont.html
@@ -151,8 +151,8 @@ onClick="document.getElementById('moon1').textContent=document.getElementById('m
          document.getElementById('moon2').textContent=document.getElementById('moontext').value;" > 
     <br> 
 <span id=area4>
- <span style="background: #ffff00; color:#000000; font-family: 'Moon'; font-size:1cm;" id='moon1'>*ABCDEFGHIJKLM@NOPQRSTUVWXYZ</span>
- <span style="background: #000000; color:#fffff0; font-family: 'Moon'; font-size:1cm;" id='moon2'> abcdefghijklm=nopqrstuvwxyz</span>
+ <span style="background: #00ffff; color:#000000; font-family: 'Moon'; font-size:0.5cm;" id='moon1'>*ABCDEFGHIJKLM@NOPQRSTUVWXYZ</span>
+ <span style="background: #000000; color:#ffff00; font-family: 'Moon'; font-size:0.6cm;" id='moon2'> abcdefghijklm=nopqrstuvwxyz</span>
 </span>
 
 Исходный код элемента. 
