--- a/demofont.html
+++ b/demofont.html
@@ -152,7 +152,8 @@ onClick="document.getElementById('moon1').textContent=document.getElementById('m
     <br> 
 <span id=area4>
  <span style="background: #00ffff; color:#000000; font-family: 'Moon'; font-size:0.5cm;" id='moon1'>*ABCDEFGHIJKLM@NOPQRSTUVWXYZ</span>
- <span style="background: #000000; color:#ffff00; font-family: 'Moon'; font-size:0.6cm;" id='moon2'> abcdefghijklm=nopqrstuvwxyz</span>
+ <span style="background: #000000; color:#ffff00; font-family: 'Moon'; font-size:0.55cm;" id='moon2'> abcdefghijklm=nopqrstuvwxyz</span>
+ <span style="background: #00ffff; color:#000000; font-family: 'Moon';" id='moon3'>*ABCDEFGHIJKLM@NOPQRSTUVWXYZ</span>
 </span>
 
 Исходный код элемента. 
