--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -101,6 +101,74 @@ step7.html
 step8.html
 <textarea class=sample>step8.html</textarea>
 
+
+<H4>А теперь тоже самое, но с подгрузкой секций одного файла.</H4>
+
+<H4>Самуил Маршак. Дом, который построил Джек.</H4>
+
+<hr>
+<div id=area2_0>
+Вот дом,
+<div id=form class=include>step.html#step0</div>
+</div>
+<hr>
+<div id=area2_1>
+А это пшеница,
+<div id=form class=include>step.html#step1</div>
+</div>
+<hr>
+<div id=area2_2>
+А это весёлая птица-синица,
+<div id=form class=include>step.html#step2</div>
+</div>
+<hr>
+<div id=area2_3>
+Вот кот,
+<div id=form class=include>step.html#step3</div>
+</div>
+<hr>
+<div id=area2_4>
+Вот пёс без хвоста,
+<div id=form class=include>step.html#step4</div>
+</div>
+<hr>
+<div id=area2_5>
+А это корова безрогая,
+<div id=form class=include>step.html#step5</div>
+</div>
+<hr>
+<div id=area2_6>
+А это старушка, седая и строгая,
+<div id=form class=include>step.html#step6</div>
+</div>
+<hr>
+<div id=area2_7>
+А это ленивый и толстый пастух,
+<div id=form class=include>step.html#step7</div>
+</div>
+<hr>
+Вот два петуха,
+<div id=area2_8>
+<div id=form class=include>step.html#step8</div>
+</div>
+<hr>
+
+<h5>Так выглядят исходные элементы страницы.</h5>
+<textarea class=preview>area0</textarea>
+<textarea class=preview>area1</textarea>
+<textarea class=preview>area2</textarea>
+<textarea class=preview>area3</textarea>
+<textarea class=preview>area4</textarea>
+<textarea class=preview>area5</textarea>
+<textarea class=preview>area6</textarea>
+<textarea class=preview>area7</textarea>
+<textarea class=preview>area8</textarea>
+
+<h5>А так, содержимое подгружаемых файлов.</h5>
+
+step.html
+<textarea class=sample>step.html</textarea>
+
 <h5>А это текст первоисточника.</h5>
 <textarea class=example>
 Самуил Маршак. Дом, который построил Джек
