--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -102,7 +102,7 @@ step8.html
 <textarea class=sample>step8.html</textarea>
 
 
-<H4>А теперь тоже самое, но с подгрузкой секций одного файла.</H4>
+<H3>А теперь тоже самое, но с подгрузкой секций одного файла.</H3>
 
 <H4>Самуил Маршак. Дом, который построил Джек.</H4>
 
@@ -154,20 +154,21 @@ step8.html
 <hr>
 
 <h5>Так выглядят исходные элементы страницы.</h5>
-<textarea class=preview>area0</textarea>
-<textarea class=preview>area1</textarea>
-<textarea class=preview>area2</textarea>
-<textarea class=preview>area3</textarea>
-<textarea class=preview>area4</textarea>
-<textarea class=preview>area5</textarea>
-<textarea class=preview>area6</textarea>
-<textarea class=preview>area7</textarea>
-<textarea class=preview>area8</textarea>
+<textarea class=preview>area2_0</textarea>
+<textarea class=preview>area2_1</textarea>
+<textarea class=preview>area2_2</textarea>
+<textarea class=preview>area2_3</textarea>
+<textarea class=preview>area2_4</textarea>
+<textarea class=preview>area2_5</textarea>
+<textarea class=preview>area2_6</textarea>
+<textarea class=preview>area2_7</textarea>
+<textarea class=preview>area2_8</textarea>
 
 <h5>А так, содержимое подгружаемых файлов.</h5>
 
 step.html
 <textarea class=sample>step.html</textarea>
+
 
 <h5>А это текст первоисточника.</h5>
 <textarea class=example>
@@ -244,6 +245,11 @@ step.html
 1 В доме,
 0 Который построил Джек. 
 </textarea>
+
+<h5>А вот, текст процедуры NumToEan13.</h5>
+
+<textarea class=sample>/script.js#NumToEan13</textarea>
+
 
 </BODY>
 </HTML>
