--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
  <li> Для создания сайта используется текстовой редактор. 
  <li> У страницы есть рамка, которая автоматически обрамляет страницу. 
  <li> В каждой папке может существовать своя рамка. Если рамки нет, она наследуется из родительской папки. 
- <li> Сама страница является рамкой для дочерних элементов. 
+ <li> Сама страница является рамкой для элементов находящихся на других страница. 
+ <li> Страница может быть подгружена не полностью, а только определенная секция. 
  <li> Навигация. Единая карта сайта плюс rss лента.  
 </ol>
 
