--- a/about.html
+++ b/about.html
@@ -11,10 +11,11 @@
 <ol>
  <li> Для создания сайта используется текстовой редактор. 
  <li> У страницы есть рамка, которая автоматически обрамляет страницу. 
- <li> В каждой папке может существовать своя рамка. Если рамки нет, она наследуется из родительской папки. 
+ <li> В каждой папке может существовать своя рамка. Если рамки нет, она будет наследоваться из родительской папки. 
  <li> Сама страница является рамкой для элементов находящихся на других страница. 
- <li> Страница может быть подгружена не полностью, а только определенная секция. 
- <li> Навигация. Единая карта сайта плюс rss лента.  
+ <li> Страница может быть подгружена не полностью, а только определенная ее секция. 
+ <li> Навигация осуществляется по единая карте сайта.  
+ <li> Новостная rss лента так же является навигатором.  
 </ol>
 
 Основа сайта - "умные" теги, позволяющие сложные вещи делать просто.
