--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -164,7 +164,7 @@ step8.html
 <textarea class=preview>area2_7</textarea>
 <textarea class=preview>area2_8</textarea>
 
-<h5>А так, содержимое подгружаемых файлов.</h5>
+<h5>А так, содержимое подгружаемого файла, состоящего из подсекций.</h5>
 
 step.html
 <textarea class=sample>step.html</textarea>
