--- a/demo/div_csv/div_csv.html
+++ b/demo/div_csv/div_csv.html
@@ -9,9 +9,9 @@
   <H1>Пример импорта внешнего csv</H1>
 
 <h3>Курс доллара</h3>
-<div class=csv>usd.csv</div>
-<div class=csv2>usd.csv</div>
-<div class=csv3>usd.csv</div>
+<div class=csv>usd.eur.csv</div>
+<div class=csv2>usd.eur.csv</div>
+<div class=csv3>usd.eur.csv</div>
 
 </BODY>
 </HTML>
