--- a/demo/div_csv/div_csv.html
+++ b/demo/div_csv/div_csv.html
@@ -7,11 +7,20 @@
 </HEAD>
 <BODY onLoad="initBody();">
   <H1>Пример импорта внешнего csv</H1>
+Как правило, экспорт/импорт табличных данных осуществляется в формате csv.
+Ручная конвертация в html, дело долгое и неблагодарное. 
+Гораздо лучше с этим справляеются специальные элементы интерфейса.
+Таблицу можно развернуть как есть, а можно в 2 или 3 колонки.
 
+<h3>Исходный код элемента</h3>
+<div class="preview">area1</div>
+
+<div id="area1">
 <h3>Курс доллара</h3>
 <div class=csv>usd.eur.csv</div>
 <div class=csv2>usd.eur.csv</div>
 <div class=csv3>usd.eur.csv</div>
+</div>
 
 </BODY>
 </HTML>
