--- a/demo/div_csv/div_csv.html
+++ b/demo/div_csv/div_csv.html
@@ -13,9 +13,9 @@
 Таблицу можно развернуть как есть, а можно в 2 или 3 колонки.
 
 <h3>Исходный код элемента</h3>
-<div class="preview">area1</div>
+<textarea class=preview>area1</textarea>
 
-<div id="area1">
+<div id=area1>
 <h3>Курс доллара</h3>
 <div class=csv>usd.eur.csv</div>
 <div class=csv2>usd.eur.csv</div>
