--- a/demo/div_include/div_include.html
+++ b/demo/div_include/div_include.html
@@ -167,7 +167,7 @@ step8.html
 <h5>А так, содержимое подгружаемого файла, состоящего из подсекций.</h5>
 
 step.html
-<textarea class=sample>step.html</textarea>
+<textarea class=include>step.html</textarea>
 
 
 <h5>А это текст первоисточника.</h5>
