--- a/demofont.html
+++ b/demofont.html
@@ -51,7 +51,11 @@
 
     @font-face {
       font-family: 'Moon';
-      src: url('fonts/moon.ttf');
+      src: url('fonts/moon.eot');
+      src: url('fonts/moon.eot?#iefix') format('eot'),
+           url('fonts/moon.woff') format('woff'),
+           url('fonts/moon.ttf') format('truetype'),
+           url('fonts/moon.svg#moon_phasesregular') format('svg');
       font-weight: normal;
       font-style: normal;
     }
