--- a/demo/div_rss_long/div_rss_long.html
+++ b/demo/div_rss_long/div_rss_long.html
@@ -7,6 +7,6 @@
 </HEAD>
 <BODY onLoad="initBody();">
   <h1>DIV - rss_long</h1>
-  <div class=rss_long>rss.xml</div>
+  <div class=rss_long>/rss.xml</div>
 </BODY>
 </HTML>
