--- a/demo/div_rss_short/div_rss_short.html
+++ b/demo/div_rss_short/div_rss_short.html
@@ -7,6 +7,6 @@
 </HEAD>
 <BODY onLoad="initBody();">
   <h1>DIV - rss_short</h1>
-  <div class=rss_short>rss.xml</div>
+  <div class=rss_short>/rss.xml</div>
 </BODY>
 </HTML>
