--- a/testlocalread.html
+++ b/testlocalread.html
@@ -8,8 +8,8 @@
 <BODY onLoad="initBody();">
   <H1>Пример локальной загрузки/выгрузки файлов.</H1>
 
-  Загрузка в html текст.
-  <input type="file" id="input" onChange="openFile(event,'output')">
+<H3>  Загрузка в html текст.</H3>
+  Выберите файл для загрузки : <input type="file" id="input" onChange="openFile(event,'output')">
     <script type="text/javascript"> 
      var openFile = function(event,key) {
        var input = event.target;
@@ -24,12 +24,12 @@
     <pre id="output"></pre> 
     <hr> 
 
-Загрузка в экранную форму
+<H3>Загрузка в экранную форму.</H3>
 <form onsubmit="download(this['name'].value, this['text'].value)">
   Имя файла : <input type="text" name="name" value="test.txt" width=30><br>
   <input type="submit" value="Выгрузить"><br>
   <textarea name="text" rows="10" cols="45" id="textcsv">Hello world. Русский текст.</textarea><br>
-  Загрузить файл : <input type="file" id="inputfile" onChange="openFileForm(event)">
+  Выберите файл для загрузки : <input type="file" id="inputfile" onChange="openFileForm(event)">
     <script type="text/javascript"> 
      var openFileForm = function(event) {
        var input = event.target;
